--- a/Project3/Project3/Project3.vcxproj
+++ b/Project3/Project3/Project3.vcxproj
@@ -79,8 +79,8 @@
     <LibraryPath>C:\Users\karll\OneDrive\Documents\SchoolWork\CSC630\source\repos\Project3\Libraries\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>C:\Users\karll\OneDrive\Documents\SchoolWork\CSC630\source\repos\Project3\headers;C:\Users\karll\OneDrive\Documents\SchoolWork\CSC630\source\repos\Project3\Libraries\include;C:\Users\karll\OneDrive\Documents\SchoolWork\CSC630\source\repos\Project3\imgui;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\karll\OneDrive\Documents\SchoolWork\CSC630\source\repos\Project3\Libraries\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Users\OrangeCatBears\Documents\CompSci HW\Graphics HW\Final Project\CSC-630-Final-Project-Fluids\Project3\headers;C:\Users\OrangeCatBears\Documents\CompSci HW\Graphics HW\Final Project\CSC-630-Final-Project-Fluids\Project3\Libraries\include;C:\Users\OrangeCatBears\Documents\CompSci HW\Graphics HW\Final Project\CSC-630-Final-Project-Fluids\Project3\imgui;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\OrangeCatBears\Documents\CompSci HW\Graphics HW\Final Project\CSC-630-Final-Project-Fluids\Project3\Libraries\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <IncludePath>C:\Users\karll\OneDrive\Documents\SchoolWork\CSC630\source\repos\Project3\headers;C:\Users\karll\OneDrive\Documents\SchoolWork\CSC630\source\repos\Project3\Libraries\include;C:\Users\karll\OneDrive\Documents\SchoolWork\CSC630\source\repos\Project3\imgui;$(IncludePath)</IncludePath>
@@ -129,7 +129,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>glfw3.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>glfw3.lib;opengl32.lib;OpenCL.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
